# display-as

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: test.yml
display-as/: Cargo.toml
display-as-proc-macro/: Cargo.toml
display-as-proc-macro/src/: lib.rs
display-as-template/: Cargo.toml
display-as-template/src/: lib.rs
display-as-template/tests/: display_as_to_string.rs  with_template.rs
display-as/benches/: big-table-displayas.html  team-displayas.html  teams-displayas.html  templates-benchmark-rs.rs
display-as/src/: base.html  class.html  float.rs  grade.html  html.rs  latex.rs  lib.rs  mathlatex.rs  rust.rs  student.html  url.rs  utf8.rs
display-as/tests/: delimiters.html  display_as_string.rs  display_as_to_string.rs  format_as.rs  from-file-base-base.html  from-file-base.html  from-file-include.html  if_let_with_pattern.rs  loop_in_let.rs  match.rs  mixed-types.rs  with_template.rs  write_as.rs
src/: lib.rs  parse.rs  rust.rs
templates/: foo.html  foo.html.rs
tests/: display_as_to_string.rs  foo.rs  from-file.html  with_template.rs
tests/simple/: mod.rs  template.html  template_html.rs
