[workspace]

[package]
name = "display-as-templates"
version = "0.1.0"
authors = ["droundy <roundyd@physics.oregonstate.edu>"]

[dependencies]

display-as = { path = "display-as" }
display-as-proc-macro = { path = "display-as-proc-macro" }

proc-macro-hack = "0.5"
glob = "0.2.11"
combine = "3.6.2"
regex = "1"
