[workspace]

members = ["display-as", "display-as-proc-macro"]

[package]
name = "display-as-template"
version = "0.1.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Templates for your data in different markup formats."
repository = "https://github.com/droundy/display-as"
keywords = ["template", "latex", "html", "display"]
license = "Apache-2.0/MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]

display-as = "0.1.3" # { path = "display-as" }
display-as-proc-macro = "0.1.0" # { path = "display-as-proc-macro" }

proc-macro-hack = "0.5"
glob = "0.2.11"
combine = "3.6.2"
regex = "1"
