[package]
name = "display-as-proc-macro"
version = "0.1.2"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "A helper crate for display-as-template."
repository = "https://github.com/droundy/display-as"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro-hack = "0.5"
proc-macro2 = "0.4.24"
glob = "0.2.11"
