[package]
name = "display-as-proc-macro"
version = "0.6.3"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "A helper crate for display-as-template."
repository = "https://github.com/droundy/display-as"
license = "Apache-2.0 OR MIT"
edition = "2018"

readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.15"
proc-macro2 = "1.0.36"
glob = "0.3.0"
rand = "0.8.3"