[package]
name = "display-as"
version = "0.4.4"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Compile-time templates for displaying data in different markup formats."
repository = "https://github.com/droundy/display-as"
keywords = ["template", "latex", "html", "display"]
license = "Apache-2.0/MIT"
edition = "2018"

[features]

gotham-web = ["gotham", "hyper", "http"]
docinclude = []
warp = ["http"]

[package.metadata.docs.rs]
all-features = true

[dependencies]

display-as-proc-macro = { version = "0.4.2", path = "../display-as-proc-macro" }
proc-macro-hack = "0.5"

mime = "0.3.12"
percent-encoding = "1.0.1"

rouille = { version = "2.2.0", optional = true }
actix-web = { version = "0.7.14", optional = true }
gotham = { version = "0.3.0", optional = true }
hyper = { version = "0.12.13", optional = true }
http = { version = "0.1.13", optional = true }

