[package]
name = "display-as"
version = "0.6.1"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Compile-time templates for displaying data in different markup formats."
repository = "https://github.com/droundy/display-as"
keywords = ["template", "latex", "html", "display"]
license = "Apache-2.0 OR MIT"
edition = "2018"
readme = "README.md"

[features]

gotham-web = ["gotham"]
docinclude = []
usewarp = ["warp", "http", "hyper"]
serde1 = ["serde", "serde_derive"]

[package.metadata.docs.rs]
all-features = true

[dependencies]

display-as-proc-macro = { version = "0.6.2", path = "../display-as-proc-macro" }

mime = "0.3.12"
percent-encoding = "1.0.1"

rouille = { version = "2.2.0", optional = true }
actix-web = { version = "0.7.14", optional = true }
gotham = { version = "0.5.0", optional = true }
hyper = { version = "0.13", optional = true }
http = { version = "0.2.1", optional = true }
warp = { version = "0.2.4", optional = true }

serde = { version = "1.0.125", optional = true }
serde_derive = { version = "1.0.125", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "templates-benchmark-rs"
harness = false
